Modify no-JS notice

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,11 +30,11 @@
         {% endblock sidebar %}
         <noscript>
           <p>
-            <b>I see you have JavaScript disabled.</b>
-            Wise choice, but two issues.
-            I use Katex to render math equations where HTML isn't enough, so that won't display correctly.
-            I also have the page themed dynamically, so it'll use a dark theme after a certain time &mdash; you'll be missing out.
-            I'd recommend you reconsider enabling JS for this site, I don't track you because I have literally no reason to track you.
+            I see you have JavaScript disabled.
+            Wise choice, it's designed for all content to be accessible without JS, or even through a terminal browser.
+            However, in GUI browsers, I have this page themed dynamically, so when it's dark outside, you'll get a dark theme.
+            It's also the only part of this website that uses JavaScript.
+            You need JS enabled if you want the dynamic theme; I have no reason to track you, I don't run analytics of any kind.
           </p>
         </noscript>
       </header>
