--- a/templates/base.html
+++ b/templates/base.html
@@ -31,9 +31,9 @@
         <noscript>
           <p>
             I see you have JavaScript disabled.
-            Wise choice, it's designed for all content to be accessible without JS, or even through a terminal browser.
+            Wise choice, this site designed for all content to be accessible without JS, or even through a terminal browser.
             However, in GUI browsers, I have this page themed dynamically, so when it's dark outside, you'll get a dark theme.
-            It's also the only part of this website that uses JavaScript.
+            Apart from math equation rendering with Katex, it's also the only part of this website that uses JavaScript.
             You need JS enabled if you want the dynamic theme; I have no reason to track you, I don't run analytics of any kind.
           </p>
         </noscript>
