Linear algebra notes

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,10 @@
   <h1><a href="{{ config.base_url }}">{{ config.title }}</a></h1>
   <p>{{ config.description }}</p>
 
+  <p>
+    <a href="https://github.com/thezeroalpha/lectures.alex.balgavy.eu">Everything is on Github</a>, so if you want to fix/change something, feel free to open a pull request.
+    You can also contact me via the methods on my homepage.</p>
+
   <p>My <a href="http://alex.balgavy.eu">homepage,</a>
     my <a href="http://blog.alex.balgavy.eu">blog,</a>
     and my <a href="http://github.com/thezeroalpha/dotfiles">dotfiles.</a>
