--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
     <!-- For browsers supporting prefers-color-scheme, use that -->
     <link rel="stylesheet" type="text/css" href="/dark.css" media="(prefers-color-scheme: dark)">
     <link rel="stylesheet" type="text/css" href="/light.css" media="(prefers-color-scheme: light)">
+    {% block scripts %}{% endblock scripts %}
   </head>
   <body>
     {% if config.extra.debug %}
