--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ config.default_language }}">
+<html lang="{{ lang }}">
   <head>
     <title>{% block title %}{% endblock title %}</title>
     <meta charset="utf-8">
