Change noscript notices
Shorten the overall notice. Then on every page using Katex, show a
message about it.

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,10 +37,7 @@
         {% endblock sidebar %}
         <noscript>
           <p>
-            I see you have JavaScript disabled.
-            Wise choice, this site designed for all content to be accessible without JS, or even through a terminal browser.
-            However, in GUI browsers, I have this page themed dynamically, so when it's dark outside, you'll get a dark theme.
-            Apart from math equation rendering with Katex, it's also the only part of this website that uses JavaScript.
+            In GUI browsers, I have this page themed dynamically, so when it's dark outside, you'll get a dark theme.
             You need JS enabled if you want the dynamic theme; I have no reason to track you, I don't run analytics of any kind.
           </p>
         </noscript>
