--- a/templates/page-math.html
+++ b/templates/page-math.html
@@ -6,6 +6,14 @@
 {% set parent_section = get_section(path=page.ancestors | last) %}
 <h1><a href="{{ parent_section.permalink }}">{{ parent_section.title }}</a></h1>
 
+<noscript>
+  <p>
+    This page uses a local copy of <a href="https://katex.org/">KaTeX</a> to render math notation.
+    Without JavaScript, some math notation may be difficult to read.
+    PS, if someone knows how to render math server-side with the <a href="http://getzola.org/">Zola</a> SSG, let me know.
+  </p>
+</noscript>
+
 <h2>Table of Contents</h2>
 <ul>
 {% for h1 in page.toc %}
