--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,21 @@
     <link rel="stylesheet" type="text/css" href="/dark.css" media="(prefers-color-scheme: dark)">
     <link rel="stylesheet" type="text/css" href="/light.css" media="(prefers-color-scheme: light)">
     {% block scripts %}{% endblock scripts %}
+
+    <!-- PWA stuff -->
+    <link rel="manifest" href="/manifest.json">
+    <script src="/sw.js"></script>
+    <script>
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('/sw.js')
+          .then(function(registration) {
+            console.log('Registration successful, scope is:', registration.scope);
+          })
+          .catch(function(error) {
+            console.log('Service worker registration failed, error:', error);
+          });
+      }
+    </script>
   </head>
   <body>
     {% if config.extra.debug %}
