--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
     my <a href="http://blog.alex.balgavy.eu">blog,</a>
     and my <a href="http://github.com/thezeroalpha/dotfiles">dotfiles.</a>
   </p>
-  <p>My keys: <a href="keys/public.gpg">PGP</a>, <a href="keys/ssh.pub">SSH</a></p>
+  <p>My keys: <a href="keys/gpg.pub">PGP</a>, <a href="keys/ssh.pub">SSH</a></p>
 {% endblock sidebar %}
 
 {% block content %}
