--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,10 @@
   <p>{{ config.description }}</p>
 
   <p>
+    <blockquote>"It is most useful to share one's knowledge with others. Otherwise, what is the point in having it?" <br/> - Geshe Wangpo, in The Dalai Lama's Cat by David Michie</blockquote>
+  </p>
+
+  <p>
     <a href="https://github.com/thezeroalpha/lectures.alex.balgavy.eu">Everything is on Github</a>, so if you want to fix/change something, feel free to open a pull request.
     You can also contact me via the methods on my homepage.</p>
 
