--- a/templates/page-math.html
+++ b/templates/page-math.html
@@ -8,7 +8,7 @@
 
 <noscript>
   <p>
-    This page uses a local copy of <a href="https://katex.org/">KaTeX</a> to render math notation.
+    This page uses a local copy of <a href="https://katex.org/">KaTeX</a> to render math notation, which is free software licensed under the MIT license.
     Without JavaScript, some math notation may be difficult to read.
     PS, if someone knows how to render math server-side with the <a href="http://getzola.org/">Zola</a> SSG, let me know.
   </p>
