Added crypto info

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,11 +14,12 @@
     <a href="https://github.com/thezeroalpha/lectures.alex.balgavy.eu">Everything is on Github</a>, so if you want to fix/change something, feel free to open a pull request.
     You can also contact me via the methods on my homepage.</p>
 
-  <p>My <a href="http://alex.balgavy.eu">homepage,</a>
-    my <a href="http://blog.alex.balgavy.eu">blog,</a>
-    and my <a href="http://github.com/thezeroalpha/dotfiles">dotfiles.</a>
+  <p>My <a href="https://alex.balgavy.eu">homepage,</a>
+    my <a href="https://blog.alex.balgavy.eu">blog,</a>
+    and my <a href="https://github.com/thezeroalpha/dotfiles">dotfiles.</a>
   </p>
   <p>My keys: <a href="https://alex.balgavy.eu/keys/gpg.pub">PGP</a>, <a href="https://alex.balgavy.eu/keys/ssh.pub">SSH</a></p>
+  <p><a href="/crypto/">My crypto wallets (BTC, XMR)</a></p>
 {% endblock sidebar %}
 
 {% block content %}
