--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
     and my <a href="https://github.com/thezeroalpha/dotfiles">dotfiles.</a>
   </p>
   <p>My keys: <a href="https://alex.balgavy.eu/keys/gpg.pub">PGP</a>, <a href="https://alex.balgavy.eu/keys/ssh.pub">SSH</a></p>
-  <p><a href="/crypto/">My crypto wallets (BTC, XMR)</a></p>
+  <p><a href="https://alex.balgavy.eu/crypto/">My crypto wallets (BTC, XMR)</a></p>
 {% endblock sidebar %}
 
 {% block content %}
