--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,9 @@
   <p>
     <blockquote>"It is most useful to share one's knowledge with others. Otherwise, what is the point in having it?" <br/> - Geshe Wangpo, in The Dalai Lama's Cat by David Michie</blockquote>
   </p>
+  <p>
+    <blockquote>"Lecturing is that mysterious process by means of which the contents of the note-book of the professor are transferred through the instrument of the fountain pen to the note-book of the student without passing through the mind of either." <br/> - Slosson</blockquote>
+  </p>
 
   <p>
     <a href="https://github.com/thezeroalpha/lectures.alex.balgavy.eu">Everything is on Github</a>, so if you want to fix/change something, feel free to open a pull request.
