--- a/templates/page.html
+++ b/templates/page.html
@@ -35,5 +35,5 @@
 {% endblock sidebar %}
 
 {% block content %}
-{{ page.content | safe }}
+{{ page.content | replace(from="<img ", to="<img loading=lazy ") | safe }}
 {% endblock content %}
