--- a/templates/section.html
+++ b/templates/section.html
@@ -10,5 +10,5 @@
 {% endblock sidebar %}
 
 {% block content %}
-{{ section.content | safe }}
+{{ section.content | replace(from="<img ", to="<img loading=lazy ") | safe }}
 {% endblock content %}
