Change base template

--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
         <noscript>
           <p>
             In GUI browsers, I have this page themed dynamically, so when it's dark outside, you'll get a dark theme.
-            You need JS enabled if you want the dynamic theme; I have no reason to track you, I don't run analytics of any kind.
+            You need JS enabled if you want the dynamic theme; I don't run any JS-based analytics or tracking.
           </p>
         </noscript>
       </header>
